--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,15 @@
 <app-header/>
 <main>
   <ul id="users">
-
       @for (user of users; track user.id) {
         <li>
           <app-user
             [user] = user
             (select)="onSelectUser($event)"
+            [selected]="user.id === selectedUserId"
           />
         </li>
       }
-
-
   </ul>
   @if(selectedUser) {
     <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"/>
