--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -4,14 +4,17 @@
       {{ name() }}'s tasks
     </h2>
     <menu>
-      <button type="button">Add a new task</button>
+      <button type="button" (click)="onAddNewTask()">Add a new task</button>
+      @if(newTask) {
+       <app-new-task/>
+      }
     </menu>
   </header>
 
   <ul>
 @for(task of tasksAssignedToSelectedUser; track task.id) {
   <li>
-    <app-task [task]="task" />
+    <app-task [task]="task" (complete)="onCompleteTask($event)" />
   </li>
 }
   </ul>
