--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,8 +1,10 @@
-<article>
-  <h3>{{ task().title }}</h3>
-  <time datetime="2026-02-08">{{task().dueDate}}</time>
-  <p>{{task().summary}}</p>
-  <div class="actions">
-    <button (click)="onCompleteTask()">Complete</button>
-  </div>
-</article>
+<app-card>
+  <article>
+    <h3>{{ task().title }}</h3>
+    <time datetime="2026-02-08">{{ task().dueDate | date: 'fullDate' }}</time>
+    <p>{{ task().summary }}</p>
+    <div class="actions">
+      <button (click)="onCompleteTask(task())">Complete</button>
+    </div>
+  </article>
+</app-card>
