--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -4,18 +4,18 @@
       {{ name() }}'s tasks
     </h2>
     <menu>
-      <button type="button" (click)="onAddNewTask()">Add a new task</button>
-      @if(newTask) {
-       <app-new-task/>
+      <button type="button" (click)="onCreateNewTask()">Add a new task</button>
+      @if (newTask) {
+        <app-new-task [userId]="userId()" (close)="onCloseNewTask()"/>
       }
     </menu>
   </header>
 
   <ul>
-@for(task of tasksAssignedToSelectedUser; track task.id) {
-  <li>
-    <app-task [task]="task" (complete)="onCompleteTask($event)" />
-  </li>
-}
+    @for (task of tasksAssignedToSelectedUser; track task.id) {
+      <li>
+        <app-task [task]="task"/>
+      </li>
+    }
   </ul>
 </section>
