--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,10 @@
-<div>
+<app-card>
   <button [class.active]="selected()" type="button" (click)="onSelectUser()">
     <img
       [src]="imagePath"
       [alt]="user().name">
     <span>{{ user().name }}</span>
   </button>
-</div>
+</app-card>
+
+
